--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_ringtone_player: ^3.0.0
+  vibration: ^1.7.3
 
 dev_dependencies:
   flutter_test:
